app/assets/stylesheets/application.css.scss
@import "variables";
@import "materialize";
@import "spina/articles";
@import "responsive";

.turbolinks-progress-bar {
  background-color: #fff;
}

.primary {
  background-color: $primary-color;
}

body {
  background-color: #f1f1f1;
}

.navbar-brand {
  position: absolute;
  color: #fff;
  display: inline-block;
  font-size: 2.1rem;
  padding: 0;
  white-space: nowrap;
  margin-left: 10px;
}

#nav-search {
  width: 100%;
  max-width: 500px;
}

#nav-category {
  z-index: 1000;
  overflow: hidden;

  div.center {
    padding-left: 100px;
  }

  &.pin-top .navbar-brand {
    display: none;
  }

  &.pinned ~ main {
    padding-top: 64px;
  }

  .current-category {
    font-size: 18px;
    margin-left: 37px;
    text-transform: uppercase;
  }

  .button-collapse-always {
    width: 64px;
  }
}

main {
  margin-top: 15px;

  #most-visited {
    .card-panel {
      margin-bottom: 0;
    }
    
    a {
      color: #212121;
      
      .card {
        .card-content {
          padding: 10px 20px;
        }
      }
    }
  }

  #facebook-page {
    .fb-page, 
    .fb-page span, 
    .fb-page span iframe[style] { 
      width: 100% !important; 
    }
    
    .card-panel {
      margin-bottom: 0;
    }
  }
}

.side-nav .userView .name {
  font-size: 1.3rem;
  margin-bottom: 10px;
  font-weight: 600;
}

.toast-notice {
  background-color: #43a047;
}

.toast-alert {
  background-color: #e53935;
}

footer.page-footer {
  padding-top: 0;

  .footer-wrapper {
    background-color: $primary-color;
    color: #fff;
    line-height: 50px;
  
    .row {
      margin-bottom: 0;
    }
    
    a.right {
      margin-left: 10px;
    }
  }
}

